# example-polyglot

./: README.md
c/: README.md  index.html  index.js  index.wasm
c/src/: lib.c  lib.js
c/template/: template.html
graaljs/: README.md  hello.js
graalvm/: Addon.java  README.md  addon.cc  hello.js
nodejs/: README.md  addon.cc  hello.js
runtimes/: README.md
rust/: Cargo.toml  README.md  index.html
rust/src/: lib.rs
wasm/: README.md
